# turkic-api

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Makefile  Procfile  UPDATE_DATA_BANK_INTEGRATION.md  mypy.ini  pyproject.toml  railway.toml  test_lid218e.py
api/: __init__.py  config.py  dependencies.py  errors.py  health.py  jobs.py  logging.py  main.py  models.py  services.py  types.py
core/: __init__.py  corpus.py  corpus_download.py  langid.py  models.py  translit.py
core/rules/: ug_ipa.rules
scripts/: run.ps1  setup_dev.py
tests/: test_api.py  test_app_factory_startup.py  test_corpus_download.py  test_dependencies.py  test_errors.py  test_errors_more.py  test_jobs_api.py  test_jobs_data_bank_upload.py  test_jobs_error_paths.py  test_jobs_process_entry.py  test_kazakh_ipa_letters.py  test_kazakh_northwind.py  test_kyrgyz_ipa_letters.py  test_kyrgyz_words_mccollum.py  test_langid.py  test_logging.py  test_main_more.py  test_services.py  test_suppress_guard.py  test_translit.py  test_translit_branches.py  test_translit_core.py  test_translit_dir_scan.py  test_turkish_ipa_letters.py  test_worker.py
tools/: __init__.py  guard.py
tools/guards/: __init__.py  exceptions_guard.py  logging_guard.py  suppress_guard.py  typing_guard.py
