[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "turkic-translit"
version = "0.3.2"
description = "Deterministic Latin and IPA transliteration for Kazakh, Kyrgyz, plus tokenizer/glue scripts."
authors = [ {name="Austin Wagner", email="austinwagner@msn.com"} ]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["kazakh", "kyrgyz", "transliteration", "ipa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Linguistic"
]

dependencies = [
    # API service dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
    # Transliteration engine
    "PyICU>=2.13,<2.16; sys_platform != 'win32'",
    # Language ID and corpus download
    "fasttext-wheel>=0.9.2",
    "datasets>=3.0.0",
    "pyarrow>=14.0.0",
    # Dev/test tooling (installed in this service repo to enable make commands)
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
examples = [
    "flask",
    "streamlit",
    "jupyterlab",
]
winlid = []
corpus = [
    "datasets>=3.0",
    "pyarrow>=14.0",
    "requests>=2.0",

]
sentry = [
    "sentry-sdk>=2.0",
]

# Development tools
dev = [
    "ruff>=0.2.0",         # Fast linter
    "mypy>=1.0",           # Type checker
    "pytest>=8.0",         # Testing framework
    "build>=1.0",          # Package builder
    "twine>=4.0",          # Package uploader
    "make>=0.1.6",         # Make command for Windows
    "types-requests>=2.31", # Type stubs for requests
]

#[project.scripts]
# (No CLI entry points in the API service package)


# No setuptools packaging; repository is API service + core library for runtime.

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["api", "core", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "PIE", # flake8-pie
]
ignore = [
    "E501"  # line too long (handled by formatter)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types (e.g., object or Protocol)." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }

[tool.ruff.lint.isort]
known-first-party = ["api", "core"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["E731"]      # do not assign a lambda expression
"examples/*" = ["E402"]   # module level import not at top of file

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
redis = "^5.2.0"
rq = "^2.0.0"
PyICU = {version = ">=2.13,<2.16", markers = "sys_platform != 'win32'"}
fasttext-wheel = "^0.9.2"
datasets = "^3.0.0"
pyarrow = "^18.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
httpx = "^0.27.0"
